[package]
name = "prgnome"
version = "1.0.2"
authors = ["Magnus Bergmark <magnus.bergmark@gmail.com>"]

[dependencies]
actix-web = "0.7.13"
listenfd = "0.3.3"
serde_json = "1.0.32"
serde_derive = "1.0.80"
serde = "1.0.80"
failure = "0.1.3"
mime = "0.3.12"
dotenv = "0.13.0"
reqwest = "0.9.4"
jsonwebtoken = "5.0.1"
env_logger = "0.5.13"
log = "0.4.6"
structopt = "0.2.13"
rust-crypto = "0.2.36"
hex = "0.3.2"
